// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceSettings matches snapshot while interface cannot be found 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceSettings.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    deviceSettings.headerText
  </h3>
  <Connect(InterfaceNotFoundMessageBox) />
</Fragment>
`;

exports[`components/devices/deviceSettings matches snapshot with one twinWithSchema 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceSettings.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <h3>
    deviceSettings.headerText
  </h3>
  <DeviceSettingsPerInterface
    deviceId={null}
    history={
      Object {
        "location": Object {
          "pathname": "/#/devices/detail/digitalTwins/settings/?id=device1&interfaceId=urn:contoso:com:EnvironmentalSensor:1",
        },
      }
    }
    interfaceId="urn:contoso:com:EnvironmentalSensor:1"
    interfaceName="environmentalSensor"
    isLoading={false}
    location={
      Object {
        "pathname": "/#/devices/detail/digitalTwins/settings/?id=device1&interfaceId=urn:contoso:com:EnvironmentalSensor:1",
      }
    }
    match={Object {}}
    patchDigitalTwinInterfaceProperties={[MockFunction]}
    refresh={[MockFunction]}
    setInterfaceId={
      [MockFunction] {
        "calls": Array [
          Array [
            null,
          ],
          Array [
            null,
          ],
          Array [
            null,
          ],
          Array [
            null,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    twinWithSchema={
      Array [
        Object {
          "desiredTwin": 123,
          "reportedTwin": null,
          "settingModelDefinition": Object {
            "@type": "Property",
            "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
            "displayName": "Brightness Level",
            "name": "brightness",
            "schema": "long",
            "writable": true,
          },
          "settingSchema": Object {
            "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
            "title": "brightness",
            "type": "number",
          },
        },
      ]
    }
  />
</Fragment>
`;

exports[`devicePropertiesPerInterface matches snapshot 1`] = `
<div
  className="pnp-detail-list scrollable-lg ms-Grid"
>
  <div
    className="list-header list-header-uncollapsible ms-Grid-row"
  >
    <span
      className="ms-Grid-col ms-sm3"
    >
      deviceProperties.columns.name
    </span>
    <span
      className="ms-Grid-col ms-sm3"
    >
      deviceProperties.columns.schema
    </span>
    <span
      className="ms-Grid-col ms-sm3"
    >
      deviceProperties.columns.unit
    </span>
    <span
      className="ms-Grid-col ms-sm3"
    >
      deviceProperties.columns.value
    </span>
  </div>
  <section
    className="list-content"
    role="list"
  >
    <DevicePropertiesPerInterfacePerProperty
      handleOverlayToggle={[Function]}
      key="0"
      propertyModelDefinition={
        Object {
          "@type": "Property",
          "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
          "displayName": "Brightness Level",
          "name": "brightness",
          "schema": "long",
          "writable": true,
        }
      }
      propertySchema={
        Object {
          "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
          "title": "brightness",
          "type": "number",
        }
      }
      reportedTwin={null}
    />
  </section>
</div>
`;
